2007-08-08  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: Sniffing for |<script| (HTML5 revision
	983) is implemented.

2007-08-06  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pod: New documentation.

	* Makefile: A rule for |ContentChecker.html| is added.

	* ContentChecker.pm: A pod "LICENSE" section is added.

	* NanoDOM.pm ($VERSION): New variable.

2007-08-05  Wakaba  <wakaba@suika.fam.cx>

	* H2H.pm: |b|, |i|, and |sub| are added to the
	list of allowed HTML elements.

2007-08-05  Wakaba  <wakaba@suika.fam.cx>

	* H2H.pm: |samp| is added to the list of allowed 
	HTML elements.

	* URIChecker.pm (check_iri): New.
	(check_iri_reference): Error type for IRI reference
	syntax error is changed.

2007-08-04  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Reference to the |Whatpm::ContentChecker::Atom|
	is added.
	(check_document): Load appropriate module before validation.

2007-08-04  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker/: New directory.

2007-08-04  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: HTML |time| element is implemented.

	* HTMLTable.pm: Comments are updated as HTML5 is revised.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (check_document): Return value
	even if no document element is found.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |$in_body| is no longer a function.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The |$in_body| code has been moved down.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The "trailing end" insertion mode
	is split into "after html body" and "after html frameset"
	insertion modes.  Their codes are merged with "after body"
	and "after frameset" codes.  |$previous_insertion_mode|
	has been removed.  "after frameset" code is 
	merged with "in frameset" code.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The "before head" insertion mode is 
	merged with the "in head" insertion mode.
