@@ -1,7 +1,7 @@
-1..876
+1..888
 # Running under perl version 5.008007 for linux
-# Current time local: Wed Aug  8 21:35:42 2007
-# Current time GMT:   Wed Aug  8 12:35:42 2007
+# Current time local: Sat Aug 11 14:42:29 2007
+# Current time GMT:   Sat Aug 11 05:42:29 2007
 # Using Test.pm version 1.25
 ok 1
 ok 2
@@ -879,3 +879,15 @@ ok 873
 ok 874
 ok 875
 ok 876
+ok 877
+ok 878
+ok 879
+ok 880
+ok 881
+ok 882
+ok 883
+ok 884
+ok 885
+ok 886
+ok 887
+ok 888
