@@ -1,7 +1,7 @@
 1..337
 # Running under perl version 5.008007 for linux
-# Current time local: Wed Aug  8 21:35:43 2007
-# Current time GMT:   Wed Aug  8 12:35:43 2007
+# Current time local: Sat Aug 11 14:42:29 2007
+# Current time GMT:   Sat Aug 11 05:42:29 2007
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
