@@ -1,3 +1,7 @@
+2007-08-11  Wakaba  <wakaba@suika.fam.cx>
+
+	* ContentType.t: New tests for bitmap images are added.
+
 2007-08-08  Wakaba  <wakaba@suika.fam.cx>
 
 	* content-model-2.dat: Some error messages are changed.
