@@ -1,3 +1,8 @@
+2007-08-11  Wakaba  <wakaba@suika.fam.cx>
+
+	* ContentType.pm: Sniffing for bitmap images (HTML5 revision
+	999) is implemented.
+
 2007-08-08  Wakaba  <wakaba@suika.fam.cx>
 
 	* ContentType.pm: Sniffing for |<script| (HTML5 revision
